# ai-nn-project

./: LICENSE  README.md  pyproject.toml  results.ipynb
ai_nn_project/dataclasses/: node.py
ai_nn_project/models/neigbours/: knn.py
ai_nn_project/models/neuronal_network/: multilayer_perceptron.py
ai_nn_project/utils/: activations.py  evaluations.py  tuning.py  visualisation.py
