[tool.poetry]
name = "ai-nn-project"
version = "0.1.0"
description = ""
authors = ["Anthony Christoforou <anthony.christoforou@etu.unige.ch>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
