[tool.poetry]
name = "ai_nn_project"
version = "0.1.0"
description = ""
authors = ["Anthony Phillipe Christoforou <anthony.christoforou@etu.unige.ch>", "Nathan Soufiane Vanson <nathan.vanson@etu.unige.ch>", "Christian William <christian.willaim@etu.unige.ch>", "Mohammed Massi Rashidi <mohammed.rashidi@etu.unige.ch>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
ucimlrepo = "^0.0.3"
ipywidgets = "^8.1.1"
ipykernel = "^6.28.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
